--- a/public/css/index.css
+++ b/public/css/index.css
@@ -7,8 +7,9 @@ h1 {
   border-bottom: solid 1px rgba(80, 80, 80, 0.8);
   padding: 0px 0px 15px 0px;
   margin-bottom: 10px;
+  color: rgb(255, 173, 80);
 }
- 
+
 .flowers-container {
   display: flex;
   flex-direction: row;
@@ -17,4 +18,8 @@ h1 {
 
 #links {
   padding-left: 25px;
+}
+
+.content {
+  padding-left: 5px;
 }
