--- a/public/css/index.css
+++ b/public/css/index.css
@@ -10,6 +10,10 @@ h1 {
   color: rgb(255, 173, 80);
 }
 
+.flower {
+  height: 88vh;
+}
+
 .flowers-container {
   display: flex;
   flex-direction: row;
