--- a/public/css/index.css
+++ b/public/css/index.css
@@ -1,8 +1,8 @@
 body {
-  font-family: sans-serif;
+  font-family: serif;
 }
 
-h1 {
+.header {
   text-align: center;
   border-bottom: solid 1px rgba(80, 80, 80, 0.8);
   padding: 0px 0px 15px 0px;
@@ -26,4 +26,34 @@ h1 {
 
 .content {
   padding-left: 5px;
+}
+
+#guest-header {
+  text-align: center;
+  padding: 50px 0px 15px 0px;
+  margin-bottom: 10px;
+  color: rgb(255, 173, 80);
+}
+
+#comment-header {
+  font-family: serif;
+  font-weight: 40;
+}
+
+#guest-body {
+  padding: 0px 70px 0px 70px;
+}
+
+#submit-body {
+  border-bottom: solid 1px rgba(80, 80, 80, 0.8);
+  padding: 0px 0px 15px 0px;
+}
+
+#submit-button {
+  background: linear-gradient(#f5f5f5, #cccccc);
+  padding: 0.2% 1% 0.2% 1%;
+}
+
+#comments-body {
+  padding: 15px 0px 0px 0px;
 }
