--- a/templates/guestBook.html
+++ b/templates/guestBook.html
@@ -20,11 +20,11 @@
       </form>
     </div>
     <div id="comments-body">
-      <table>
+      <table id="table" border="1">
         <thead>
-          <td>DATETIME</td>
-          <td>NAME</td>
-          <td>COMMENTS_LIST</td>
+          <td class="date">DATETIME</td>
+          <td class="name">NAME</td>
+          <td class="comment">COMMENTS_LIST</td>
         </thead>
         <tbody>
           __COMMENTS__
