added class app

--- a/templates/guestBook.html
+++ b/templates/guestBook.html
@@ -26,7 +26,7 @@
       </form>
     </div>
     <div id="comments-body">
-      <table id="table" border="1">
+      <table id="table" cellspacing="0px" border="1">
         <thead>
           <td class="date">DATETIME</td>
           <td class="name">NAME</td>
